# cxutils

./: .gitignore  CMakeLists.txt  README.md
cmake/: CustomFunctions.cmake
include/cxutils/: concepts.hpp  cxutils.hpp  enumerate.hpp  logging.hpp  transform.hpp  zip.hpp
tests/: main.cpp  testenumerate.cpp  testlog.cpp  testtransform.cpp  testzip.cpp
